css/styles.css
/*
* Derived from skeleton.css
*/


/* Table of contents
––––––––––––––––––––––––––––––––––––––––––––––––––
- Base Styles Overrides
- Typography Overrides
- Links
- Elements
*/


/* Base Styles
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/* NOTE
html is set to 62.5% so that all the REM measurements throughout Skeleton
are based on 10px sizing. So basically 1.5rem = 15px :) */
html {
  -webkit-font-smoothing: antialiased;
  font-size: 62.5%; }
h1, h2, h3, h4, h5, h6, body {
  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
  line-height: 1.8;
  font-weight: 300;
  font-kerning: 10;
  font-family: "colfax-web", -apple-system, HelveticaNeue, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
  color: #282828; }


/* Typography
–––––––––––––––––––––––––––––––––––––––––––––––––– */
/* Margins & Padding */
h1, h2, h3, h4, h5, h6, body {
  margin-top: 0;
  margin-bottom: 2rem;
}

/* Attributes */
h1, h2, h3, h4, h5, h6, body {
  font-size: 2.4rem;
  line-height: 1.6;
  letter-spacing: -0.028rem;
}

/* Larger than phablet */
@media (min-width: 550px) {
  h1, h2, h3, h4, h5, h6, body {
    font-size: 2.6rem;
  }
}


/* Links
–––––––––––––––––––––––––––––––––––––––––––––––––– */
a {
 color: #282828;
 text-decoration: none; } /* Material: Blue Grey 300 */

.dotted {
  background-image: linear-gradient(to right, black 33%, rgba(255,255,255,0) 0%);
  background-position: bottom;
  background-size: 3px 1px;
  background-repeat: repeat-x;
}

a:hover {
  color: #000; } /* Material: Blue Grey 500 */

.icon-social {
 color: #282828; } /* Material: Blue Grey 200 */

.icon-social:hover {
  color: #000; } /* Material: Blue Grey 400 */


/* Elements
–––––––––––––––––––––––––––––––––––––––––––––––––– */
.container {
  position: absolute;
  top: 3%;
  overflow: auto;
  padding-left: 10%;
  padding-right: 10%;
}

.icon-social {
    margin-top: 10px;
    margin-right: 8px;
    font-size: 2.2rem;
}

.copyright {
  color: #fff;
  font-family: -apple-system, HelveticaNeue, "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
  font-weight: 500;
  font-size: 0.1em;
  display: inline;
}

/* Larger than phablet */
@media (min-width: 550px) {
  .container {
    top: 50%;
    transform: translateY(-56%);
    padding-left: 0%;
    left: 15%;
    padding-right: 15%;
  }
}

